minor change, Springified - using the RestClient instead of the java.net.URLConnection.